@@ -19,12 +19,12 @@ Porting status
 ==============
 - Linux: This is the primary development platform, and should always work
 - FreeBSD: Status unknown
-- Windows: Porting started
+- Windows: Supported with some limitations
 - Mac OS X: Status unknown
 
 
-Installation requirements
-=========================
+Build requirements
+==================
 
 - OpenOffice.org (Office and SDK), version 2.0.4 or later.
 - Libvoikko version 1.5 or later, and compatible versions of Suomi-malaga and
@@ -32,6 +32,8 @@ Installation requirements
 - On Linux: the C++ compiler from the GCC, version 3.4 or later. Other tools
   needed for compilation are usually present in default setups of any
   distribution.
+- On Windows: Microsoft Visual C++ 2005 (the Express Edition is sufficient),
+  GNU make, GNU sed and Info-Zip zip
 
 
 Instructions for compilation
